# osp

./: .gitignore  README.md  depeds_github_actions.rosinstall  depends.rosinstall
.github/ISSUE_TEMPLATE/: bug--バグ--🐛.md  feature--機能-🚀.md
.github/workflows/: ros2_ci.yml
docs/: SetupGuide.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install-scripts/: alias-teleop.sh
install-scripts/rules/: 99-dynamixel-device.rules
install/osp_bringup/share/osp_bringup/: package.bash  package.zsh
install/osp_teleop/share/ament_index/resource_index/package_run_dependencies/: osp_teleop
install/osp_teleop/share/ament_index/resource_index/parent_prefix_path/: osp_teleop
install/osp_teleop/share/osp_teleop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/osp_teleop/share/osp_teleop/cmake/: osp_teleopConfig-version.cmake  osp_teleopConfig.cmake
install/osp_teleop/share/osp_teleop/config/: osp_teleop.yaml
install/osp_teleop/share/osp_teleop/environment/: ament_prefix_path.dsv  path.dsv
install/osp_teleop/share/osp_teleop/meshes/: flipper_3.STL
log/: latest_build
osp_bringup/config/: osp_bringup.yaml
osp_bringup/include/osp_bringup/: osp.hpp
osp_bringup/launch/: osp_bringup.launch.xml
osp_bringup/src/: osp.cpp
osp_naive/: package.xml
osp_rviz/: CMakeLists.txt  package.xml
osp_rviz/include/osp_rviz/: osp_rviz.hpp
osp_rviz/meshes/: flipper_1.STL  flipper_2.STL  flipper_3.STL  flipper_4.STL
osp_rviz/src/: osp_rviz.cpp  osp_rviz_node.cpp
osp_rviz/urdf/: osp_rviz.csv  osp_rviz.urdf
osp_teleop/: CMakeLists.txt
osp_teleop/config/: osp_teleop.yaml
osp_teleop/launch/: osp_teleop.launch.xml
osp_teleop/meshes/: flipper_1.STL  flipper_4.STL
osp_teleop/urdf/: osp_teleop.urdf
scripts/: install-all  install-apt-tools  install-auto-bringup-scripts  install-osp-alias  install-udev-rules
scripts/rules/: 99-cameras.rules  99-dynamixel-device.rules
scripts/setup_data/: OspRobotAuto.desktop  OspTeleopAuto.desktop  osp_robot_auto_start.sh  osp_teleop_auto_start.sh
src/osp_bringup/: CMakeLists.txt
src/osp_naive/osp_bringup/: package.xml
src/osp_naive/osp_bringup/config/: osp_bringup.yaml
src/osp_naive/osp_bringup/launch/: osp_bringup.launch.xml
src/osp_naive/osp_bringup/src/: osp.cpp  osp_node.cpp
src/osp_naive/osp_description/: CMakeLists.txt  README.md  package.xml
src/osp_naive/osp_description/launch/: display.launch.py
src/osp_naive/osp_description/meshes/: flipper_2.STL
src/osp_naive/osp_description/rviz/: osp.rviz
src/osp_naive/osp_description/urdf/: osp.urdf
src/osp_naive/osp_naive/: CMakeLists.txt  package.xml
src/osp_naive/osp_teleop/: package.xml
src/osp_naive/osp_teleop/launch/: osp_teleop.launch.xml
src/osp_teleop/: package.xml
src/osp_teleop/urdf/: osp_teleop.csv
