<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osp_teleop</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ktaro125@gmail.com">take</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>joint_state_publisher_gui</depend>
  <depend>joy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>foxglove_bridge</depend>
  <depend>rmw_cyclonedds_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
